# NuCat

./: CMakeLists.txt  README.md
.github/workflows/: Build.yml
Docs/: Readme.md  UiDev.md
NuCat/: CMakeLists.txt  NuCat.cpp
NuCat/include/: FileReader.h  Language.h  Log.h  RunTime.h  SHA1.h  Setting.h  Util.h
NuCat/platform/src/: Util_Linux.cpp  Util_Win.cpp
NuCat/src/: FileReader.cpp  Language.cpp  Log.cpp  Runtime.cpp  SHA1.cpp  Setting.cpp  Util.cpp
Resource/Config/: Setting.json
Resource/Language/: en-us.json  zh-cn.json
Resource/Theme/default/: Test.html  package.json
Resource/Theme/default/Language/: en-us.json  zh-cn.json
